# qtgllogger

./: .gitignore  CMakeLists.txt
output/: includeme.cmake  makeme.cmake
output/include/qtgllogger/: qtgllogger.h  qtgllogger_global.h
src/: qtgllogger.cpp  qtgllogger.h  qtgllogger_global.cpp  qtgllogger_global.h  qtgllogger_obj.cpp  qtgllogger_obj.h
